<resources>
    <string name="app_name">appli</string>
    <string name="todo">TODO</string>
    <string name="pysic_co">Pysic Co</string>
    <string name="let_s_start">LeT\'s Start</string>
    <string name="todo1">TODO1</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="togglebutton1">ToggleButton</string>
    <string name="togglebutton2">ToggleButton</string>
    <string name="what_u_c">What u C</string>
    <string name="what_u_c1">What u C</string>
    <string name="dreams">Dreams</string>
    <string name="dreams1">Dreams</string>
    <string name="dreams2">Dreams</string>
    <string name="high_af">High Af</string>
    <string name="high_af1">High Af</string>
    <string name="high_af2">High Af</string>
    <string name="want_2_know_more">WaNt 2 KnOw MoRe</string>
    <string name="press_when_you_got_the_logo">Press When you got the Logo</string>
    <string name="got_it">GoT iT</string>
    <string name="press_when_you_see_it">Press when you see it.</string>
    <string name="todo23">TODO</string>
</resources>
