<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".secondact">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/earth"
            android:id="@+id/imageView3" android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/pysic_co"
            android:layout_width="159dp"
            android:layout_height="32dp"
            android:id="@+id/textView" android:textSize="24sp"
            android:fontFamily="@font/geostar" android:textColor="@android:color/background_dark"
            android:textStyle="bold|italic" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textColorHint="#000000"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="407dp"
            android:layout_height="241dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="140dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">
        <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton3" android:textOff="@string/what_u_c" android:textOn="@string/what_u_c"
                android:background="@drawable/toggle" android:fontFamily="@font/metal_mania" android:textSize="18sp"
                android:textColor="#03141D"/>
        <ToggleButton
                android:text="@string/dreams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton7" android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp" android:textOff="@string/dreams" android:textOn="@string/dreams"
                android:background="@drawable/toggle" android:fontFamily="@font/metal_mania" android:textSize="18sp"
                android:textColor="#03141D"/>
        <ToggleButton
                android:text="@string/high_af"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton8" android:textOff="@string/high_af"
                android:textOn="@string/high_af" android:background="@drawable/toggle"
                android:fontFamily="@font/metal_mania" android:textSize="18sp" android:textColor="#03141D"/>
    </LinearLayout>
    <Button
            android:text="@string/want_2_know_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/secondsub" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.498" android:background="@drawable/button"
            android:textColor="#FDBCB7DD" android:textSize="18sp" android:textAllCaps="false"
            android:textStyle="bold|italic" android:fontFamily="@font/warnes"/>
</android.support.constraint.ConstraintLayout>