<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fin">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/pysc"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/pysic_co"
            android:layout_width="159dp"
            android:layout_height="32dp"
            android:id="@+id/textView" android:textSize="24sp"
            android:fontFamily="@font/geostar" android:textColor="#A81818"
            android:textStyle="bold|italic" android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textColorHint="#000000"
            app:layout_constraintHorizontal_bias="0.584"/>
    <TextView
            android:text="@string/press_when_you_see_it"
            android:layout_width="263dp"
            android:layout_height="36dp"
            android:id="@+id/textView3" android:textColor="#FFFFFF"
            android:textSize="24sp" android:textStyle="italic" android:fontFamily="@font/megrim"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.939"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/button3"/>
    <Button
            android:text="@string/got_it"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.498"
            android:background="@drawable/button" android:textColor="#F2C7C7CF" android:textSize="24sp"
            android:textStyle="bold" android:fontFamily="@font/nosifer"/>
</android.support.constraint.ConstraintLayout>